Fixed questions. Adding comments to code.
Fixed questions. Adding comments to code.

--- a/MyApplication2/MyApplication2/app/src/main/AndroidManifest.xml
+++ b/MyApplication2/MyApplication2/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile" >
         </activity>
+        <activity
+            android:name=".IntroductionActivity"
+            android:label="@string/title_activity_introduction" >
+
+        </activity>
     </application>
 
 </manifest>
